// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderKotlin matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-kotlin:core v7fe50c7 or later.

package analytics

import com.hightouch.analytics.kotlin.core.Analytics
import com.hightouch.analytics.kotlin.core.BaseEvent
import com.hightouch.analytics.kotlin.core.platform.EnrichmentClosure
import kotlinx.serialization.json.JsonArray
import kotlinx.serialization.json.JsonElement
import kotlinx.serialization.json.JsonNull
import kotlinx.serialization.json.JsonObject
import kotlinx.serialization.json.JsonPrimitive
import kotlinx.serialization.json.add
import kotlinx.serialization.json.buildJsonArray
import kotlinx.serialization.json.buildJsonObject
import kotlinx.serialization.json.put

class HtEvents {
    data class TrackOrderCompletedV1 (
        val orderId: String? = null
    )

    data class TrackOrderCompletedV2 (
        val orderId: String? = null,
        val total: Double? = null
    )

    @Retention(AnnotationRetention.RUNTIME)
    @Target(AnnotationTarget.FIELD)
    annotation class JsonName(val value: String)

    private fun cloneMap(map: Map<String, Any?>?): MutableMap<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (map == null) {
            return out
        }
        for ((key, value) in map) {
            out[key] = value
        }
        return out
    }

    private fun setAtPath(
        root: Map<String, Any?>,
        path: List<String>,
        value: String,
    ): MutableMap<String, Any?> {
        if (path.isEmpty()) {
            return cloneMap(root)
        }
        val clone = cloneMap(root)
        var cursor: MutableMap<String, Any?> = clone
        for (i in 0 until path.size - 1) {
            val key = path[i]
            val existing = cursor[key]
            val child =
                if (existing is Map<*, *>) {
                    @Suppress("UNCHECKED_CAST")
                    cloneMap(existing as Map<String, Any?>)
                } else {
                    linkedMapOf()
                }
            cursor[key] = child
            cursor = child
        }
        cursor[path.last()] = value
        return clone
    }

    @Suppress("UNCHECKED_CAST")
    private fun convertValue(value: Any?): Any? {
        if (value == null) {
            return null
        }
        if (value is String || value is Number || value is Boolean) {
            return value
        }
        if (value is Map<*, *>) {
            val out = linkedMapOf<String, Any?>()
            for ((key, nested) in value) {
                if (key == null || nested == null) {
                    continue
                }
                out[key.toString()] = convertValue(nested)
            }
            return out
        }
        if (value is Collection<*>) {
            return value.mapNotNull { convertValue(it) }
        }
        if (value::class.java.isEnum) {
            return value.toString()
        }
        if (value::class.java.enclosingClass == HtEvents::class.java) {
            return toMap(value)
        }
        return value
    }

    private fun toMap(value: Any?): Map<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (value == null) {
            return out
        }
        if (value is Map<*, *>) {
            @Suppress("UNCHECKED_CAST")
            return cloneMap(value as Map<String, Any?>)
        }
        for (field in value::class.java.declaredFields) {
            val modifiers = field.modifiers
            if (
                java.lang.reflect.Modifier.isStatic(modifiers) ||
                field.isSynthetic ||
                field.name.startsWith("$")
            ) {
                continue
            }
            field.isAccessible = true
            val fieldValue =
                try {
                    field.get(value)
                } catch (_: IllegalAccessException) {
                    continue
                }
            if (fieldValue == null) {
                continue
            }
            val jsonName = field.getAnnotation(JsonName::class.java)
            out[jsonName?.value ?: field.name] = convertValue(fieldValue)
        }
        return out
    }

    private fun jsonElementOf(value: Any?): JsonElement {
        return when (value) {
            null -> JsonNull
            is JsonElement -> value
            is String -> JsonPrimitive(value)
            is Boolean -> JsonPrimitive(value)
            is Number -> JsonPrimitive(value)
            is Map<*, *> ->
                buildJsonObject {
                    for ((key, nested) in value) {
                        if (key != null && nested != null) {
                            put(key.toString(), jsonElementOf(nested))
                        }
                    }
                }
            is Collection<*> ->
                buildJsonArray {
                    for (item in value) {
                        if (item != null) {
                            add(jsonElementOf(item))
                        }
                    }
                }
            else -> toJsonObject(value)
        }
    }

    private fun toJsonObject(value: Any?): JsonObject {
        if (value == null) {
            return JsonObject(emptyMap())
        }
        if (value is JsonObject) {
            return value
        }
        val map = toMap(value)
        return buildJsonObject {
            for ((key, nested) in map) {
                if (nested != null) {
                    put(key, jsonElementOf(nested))
                }
            }
        }
    }

    private fun mergeContext(event: BaseEvent, extra: Map<String, Any?>): BaseEvent {
        val merged = event.context.toMutableMap()
        val extraJson = jsonElementOf(extra)
        if (extraJson is JsonObject) {
            for ((key, nested) in extraJson) {
                val existing = merged[key]
                merged[key] =
                    if (existing is JsonObject && nested is JsonObject) {
                        JsonObject(existing + nested)
                    } else {
                        nested
                    }
            }
        }
        event.context = JsonObject(merged)
        return event
    }

    private fun contextEnrichment(context: Map<String, Any?>?): EnrichmentClosure? {
        if (context.isNullOrEmpty()) {
            return null
        }
        return { event ->
            if (event == null) {
                event
            } else {
                mergeContext(event, context)
            }
        }
    }

    private data class Injected(
        val data: Map<String, Any?>,
        val context: Map<String, Any?>?,
    )

    private fun withSchemaVersion(
        data: Map<String, Any?>,
        context: Map<String, Any?>?,
        path: List<String>,
        version: String,
        envelopeKey: String,
    ): Injected {
        if (path.isEmpty()) {
            return Injected(data, context)
        }
        val head = path.first()
        val rest = path.drop(1)
        if (head == envelopeKey) {
            return Injected(setAtPath(cloneMap(data), rest, version), context)
        }
        if (head == "context") {
            return Injected(data, setAtPath(cloneMap(context), rest, version))
        }
        return Injected(data, context)
    }

    private val analytics: Analytics

    constructor(analytics: Analytics) {
        this.analytics = analytics
    }

    fun trackOrderCompletedV1(properties: TrackOrderCompletedV1, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(properties),
            context,
            emptyList(),
            "v1",
            "properties",
        )
        analytics.track("Order Completed", toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun trackOrderCompletedV2(properties: TrackOrderCompletedV2, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(properties),
            context,
            emptyList(),
            "v2",
            "properties",
        )
        analytics.track("Order Completed", toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun trackOrderCompleted(properties: TrackOrderCompletedV2, context: Map<String, Any>? = null) {
        trackOrderCompletedV2(properties, context)
    }
}
"
`;

exports[`renderKotlin matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-kotlin:core v7fe50c7 or later.

package analytics

import com.hightouch.analytics.kotlin.core.Analytics
import com.hightouch.analytics.kotlin.core.BaseEvent
import com.hightouch.analytics.kotlin.core.platform.EnrichmentClosure
import kotlinx.serialization.json.JsonArray
import kotlinx.serialization.json.JsonElement
import kotlinx.serialization.json.JsonNull
import kotlinx.serialization.json.JsonObject
import kotlinx.serialization.json.JsonPrimitive
import kotlinx.serialization.json.add
import kotlinx.serialization.json.buildJsonArray
import kotlinx.serialization.json.buildJsonObject
import kotlinx.serialization.json.put

class HtEvents {
    data class TrackOrderCompletedDefault (
        val orderId: String,
        val total: Double? = null
    )

    @Retention(AnnotationRetention.RUNTIME)
    @Target(AnnotationTarget.FIELD)
    annotation class JsonName(val value: String)

    private fun cloneMap(map: Map<String, Any?>?): MutableMap<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (map == null) {
            return out
        }
        for ((key, value) in map) {
            out[key] = value
        }
        return out
    }

    private fun setAtPath(
        root: Map<String, Any?>,
        path: List<String>,
        value: String,
    ): MutableMap<String, Any?> {
        if (path.isEmpty()) {
            return cloneMap(root)
        }
        val clone = cloneMap(root)
        var cursor: MutableMap<String, Any?> = clone
        for (i in 0 until path.size - 1) {
            val key = path[i]
            val existing = cursor[key]
            val child =
                if (existing is Map<*, *>) {
                    @Suppress("UNCHECKED_CAST")
                    cloneMap(existing as Map<String, Any?>)
                } else {
                    linkedMapOf()
                }
            cursor[key] = child
            cursor = child
        }
        cursor[path.last()] = value
        return clone
    }

    @Suppress("UNCHECKED_CAST")
    private fun convertValue(value: Any?): Any? {
        if (value == null) {
            return null
        }
        if (value is String || value is Number || value is Boolean) {
            return value
        }
        if (value is Map<*, *>) {
            val out = linkedMapOf<String, Any?>()
            for ((key, nested) in value) {
                if (key == null || nested == null) {
                    continue
                }
                out[key.toString()] = convertValue(nested)
            }
            return out
        }
        if (value is Collection<*>) {
            return value.mapNotNull { convertValue(it) }
        }
        if (value::class.java.isEnum) {
            return value.toString()
        }
        if (value::class.java.enclosingClass == HtEvents::class.java) {
            return toMap(value)
        }
        return value
    }

    private fun toMap(value: Any?): Map<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (value == null) {
            return out
        }
        if (value is Map<*, *>) {
            @Suppress("UNCHECKED_CAST")
            return cloneMap(value as Map<String, Any?>)
        }
        for (field in value::class.java.declaredFields) {
            val modifiers = field.modifiers
            if (
                java.lang.reflect.Modifier.isStatic(modifiers) ||
                field.isSynthetic ||
                field.name.startsWith("$")
            ) {
                continue
            }
            field.isAccessible = true
            val fieldValue =
                try {
                    field.get(value)
                } catch (_: IllegalAccessException) {
                    continue
                }
            if (fieldValue == null) {
                continue
            }
            val jsonName = field.getAnnotation(JsonName::class.java)
            out[jsonName?.value ?: field.name] = convertValue(fieldValue)
        }
        return out
    }

    private fun jsonElementOf(value: Any?): JsonElement {
        return when (value) {
            null -> JsonNull
            is JsonElement -> value
            is String -> JsonPrimitive(value)
            is Boolean -> JsonPrimitive(value)
            is Number -> JsonPrimitive(value)
            is Map<*, *> ->
                buildJsonObject {
                    for ((key, nested) in value) {
                        if (key != null && nested != null) {
                            put(key.toString(), jsonElementOf(nested))
                        }
                    }
                }
            is Collection<*> ->
                buildJsonArray {
                    for (item in value) {
                        if (item != null) {
                            add(jsonElementOf(item))
                        }
                    }
                }
            else -> toJsonObject(value)
        }
    }

    private fun toJsonObject(value: Any?): JsonObject {
        if (value == null) {
            return JsonObject(emptyMap())
        }
        if (value is JsonObject) {
            return value
        }
        val map = toMap(value)
        return buildJsonObject {
            for ((key, nested) in map) {
                if (nested != null) {
                    put(key, jsonElementOf(nested))
                }
            }
        }
    }

    private fun mergeContext(event: BaseEvent, extra: Map<String, Any?>): BaseEvent {
        val merged = event.context.toMutableMap()
        val extraJson = jsonElementOf(extra)
        if (extraJson is JsonObject) {
            for ((key, nested) in extraJson) {
                val existing = merged[key]
                merged[key] =
                    if (existing is JsonObject && nested is JsonObject) {
                        JsonObject(existing + nested)
                    } else {
                        nested
                    }
            }
        }
        event.context = JsonObject(merged)
        return event
    }

    private fun contextEnrichment(context: Map<String, Any?>?): EnrichmentClosure? {
        if (context.isNullOrEmpty()) {
            return null
        }
        return { event ->
            if (event == null) {
                event
            } else {
                mergeContext(event, context)
            }
        }
    }

    private data class Injected(
        val data: Map<String, Any?>,
        val context: Map<String, Any?>?,
    )

    private fun withSchemaVersion(
        data: Map<String, Any?>,
        context: Map<String, Any?>?,
        path: List<String>,
        version: String,
        envelopeKey: String,
    ): Injected {
        if (path.isEmpty()) {
            return Injected(data, context)
        }
        val head = path.first()
        val rest = path.drop(1)
        if (head == envelopeKey) {
            return Injected(setAtPath(cloneMap(data), rest, version), context)
        }
        if (head == "context") {
            return Injected(data, setAtPath(cloneMap(context), rest, version))
        }
        return Injected(data, context)
    }

    private val analytics: Analytics

    constructor(analytics: Analytics) {
        this.analytics = analytics
    }

    fun trackOrderCompletedDefault(properties: TrackOrderCompletedDefault, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(properties),
            context,
            listOf("context", "protocols", "schemaVersion"),
            "default",
            "properties",
        )
        analytics.track("Order Completed", toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun trackOrderCompleted(properties: TrackOrderCompletedDefault, context: Map<String, Any>? = null) {
        trackOrderCompletedDefault(properties, context)
    }
}
"
`;

exports[`renderKotlin matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-kotlin:core v7fe50c7 or later.

package analytics

import com.hightouch.analytics.kotlin.core.Analytics
import com.hightouch.analytics.kotlin.core.BaseEvent
import com.hightouch.analytics.kotlin.core.platform.EnrichmentClosure
import kotlinx.serialization.json.JsonArray
import kotlinx.serialization.json.JsonElement
import kotlinx.serialization.json.JsonNull
import kotlinx.serialization.json.JsonObject
import kotlinx.serialization.json.JsonPrimitive
import kotlinx.serialization.json.add
import kotlinx.serialization.json.buildJsonArray
import kotlinx.serialization.json.buildJsonObject
import kotlinx.serialization.json.put

class HtEvents {
    data class IdentifyDefault (
        val email: String? = null
    )

    data class TrackCartViewedDefault (
        val amount: Double,
        val currency: String,
        val itemCount: Double? = null
    )

    @Retention(AnnotationRetention.RUNTIME)
    @Target(AnnotationTarget.FIELD)
    annotation class JsonName(val value: String)

    private fun cloneMap(map: Map<String, Any?>?): MutableMap<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (map == null) {
            return out
        }
        for ((key, value) in map) {
            out[key] = value
        }
        return out
    }

    private fun setAtPath(
        root: Map<String, Any?>,
        path: List<String>,
        value: String,
    ): MutableMap<String, Any?> {
        if (path.isEmpty()) {
            return cloneMap(root)
        }
        val clone = cloneMap(root)
        var cursor: MutableMap<String, Any?> = clone
        for (i in 0 until path.size - 1) {
            val key = path[i]
            val existing = cursor[key]
            val child =
                if (existing is Map<*, *>) {
                    @Suppress("UNCHECKED_CAST")
                    cloneMap(existing as Map<String, Any?>)
                } else {
                    linkedMapOf()
                }
            cursor[key] = child
            cursor = child
        }
        cursor[path.last()] = value
        return clone
    }

    @Suppress("UNCHECKED_CAST")
    private fun convertValue(value: Any?): Any? {
        if (value == null) {
            return null
        }
        if (value is String || value is Number || value is Boolean) {
            return value
        }
        if (value is Map<*, *>) {
            val out = linkedMapOf<String, Any?>()
            for ((key, nested) in value) {
                if (key == null || nested == null) {
                    continue
                }
                out[key.toString()] = convertValue(nested)
            }
            return out
        }
        if (value is Collection<*>) {
            return value.mapNotNull { convertValue(it) }
        }
        if (value::class.java.isEnum) {
            return value.toString()
        }
        if (value::class.java.enclosingClass == HtEvents::class.java) {
            return toMap(value)
        }
        return value
    }

    private fun toMap(value: Any?): Map<String, Any?> {
        val out = linkedMapOf<String, Any?>()
        if (value == null) {
            return out
        }
        if (value is Map<*, *>) {
            @Suppress("UNCHECKED_CAST")
            return cloneMap(value as Map<String, Any?>)
        }
        for (field in value::class.java.declaredFields) {
            val modifiers = field.modifiers
            if (
                java.lang.reflect.Modifier.isStatic(modifiers) ||
                field.isSynthetic ||
                field.name.startsWith("$")
            ) {
                continue
            }
            field.isAccessible = true
            val fieldValue =
                try {
                    field.get(value)
                } catch (_: IllegalAccessException) {
                    continue
                }
            if (fieldValue == null) {
                continue
            }
            val jsonName = field.getAnnotation(JsonName::class.java)
            out[jsonName?.value ?: field.name] = convertValue(fieldValue)
        }
        return out
    }

    private fun jsonElementOf(value: Any?): JsonElement {
        return when (value) {
            null -> JsonNull
            is JsonElement -> value
            is String -> JsonPrimitive(value)
            is Boolean -> JsonPrimitive(value)
            is Number -> JsonPrimitive(value)
            is Map<*, *> ->
                buildJsonObject {
                    for ((key, nested) in value) {
                        if (key != null && nested != null) {
                            put(key.toString(), jsonElementOf(nested))
                        }
                    }
                }
            is Collection<*> ->
                buildJsonArray {
                    for (item in value) {
                        if (item != null) {
                            add(jsonElementOf(item))
                        }
                    }
                }
            else -> toJsonObject(value)
        }
    }

    private fun toJsonObject(value: Any?): JsonObject {
        if (value == null) {
            return JsonObject(emptyMap())
        }
        if (value is JsonObject) {
            return value
        }
        val map = toMap(value)
        return buildJsonObject {
            for ((key, nested) in map) {
                if (nested != null) {
                    put(key, jsonElementOf(nested))
                }
            }
        }
    }

    private fun mergeContext(event: BaseEvent, extra: Map<String, Any?>): BaseEvent {
        val merged = event.context.toMutableMap()
        val extraJson = jsonElementOf(extra)
        if (extraJson is JsonObject) {
            for ((key, nested) in extraJson) {
                val existing = merged[key]
                merged[key] =
                    if (existing is JsonObject && nested is JsonObject) {
                        JsonObject(existing + nested)
                    } else {
                        nested
                    }
            }
        }
        event.context = JsonObject(merged)
        return event
    }

    private fun contextEnrichment(context: Map<String, Any?>?): EnrichmentClosure? {
        if (context.isNullOrEmpty()) {
            return null
        }
        return { event ->
            if (event == null) {
                event
            } else {
                mergeContext(event, context)
            }
        }
    }

    private data class Injected(
        val data: Map<String, Any?>,
        val context: Map<String, Any?>?,
    )

    private fun withSchemaVersion(
        data: Map<String, Any?>,
        context: Map<String, Any?>?,
        path: List<String>,
        version: String,
        envelopeKey: String,
    ): Injected {
        if (path.isEmpty()) {
            return Injected(data, context)
        }
        val head = path.first()
        val rest = path.drop(1)
        if (head == envelopeKey) {
            return Injected(setAtPath(cloneMap(data), rest, version), context)
        }
        if (head == "context") {
            return Injected(data, setAtPath(cloneMap(context), rest, version))
        }
        return Injected(data, context)
    }

    private val analytics: Analytics

    constructor(analytics: Analytics) {
        this.analytics = analytics
    }

    fun identifyDefault(traits: IdentifyDefault, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(traits),
            context,
            emptyList(),
            "default",
            "traits",
        )
        analytics.identify(toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun identifyDefault(userId: String, traits: IdentifyDefault, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(traits),
            context,
            emptyList(),
            "default",
            "traits",
        )
        analytics.identify(userId, toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun identify(traits: IdentifyDefault, context: Map<String, Any>? = null) {
        identifyDefault(traits, context)
    }

    fun identify(userId: String, traits: IdentifyDefault, context: Map<String, Any>? = null) {
        identifyDefault(userId, traits, context)
    }

    fun trackCartViewedDefault(properties: TrackCartViewedDefault, context: Map<String, Any>? = null) {
        val injected = withSchemaVersion(
            toMap(properties),
            context,
            emptyList(),
            "default",
            "properties",
        )
        analytics.track("Cart Viewed", toJsonObject(injected.data), contextEnrichment(injected.context))
    }

    fun trackCartViewed(properties: TrackCartViewedDefault, context: Map<String, Any>? = null) {
        trackCartViewedDefault(properties, context)
    }
}
"
`;
